# CMake-tutorial

./: .gitignore  README.md  compile.sh
hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
opencv/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  OpenCV.cmake  OpenCV.txt.in  OpenCV_contrib.cmake  display.cpp
opencv/build_dir/: CMakeCache.txt
opencv/superbuild/: CMakeLists.txt  OpenCV-External.cmake  clBLAS-External.cmake
